# bevy_template

./: Cargo.toml  JustFile  README.md
src/: main.rs  prelude.rs
src/plugins/: mod.rs
