[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
rand = "0.8"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[features]
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
panic = 'abort'
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
